--- a/style.css
+++ b/style.css
@@ -86,17 +86,17 @@ footer h1 {
 footer ul {
   list-style: none;
 }
-footer li {
+footer ul li {
   padding-bottom: 0.5rem;
 }
-footer a {
+footer ul li a {
   color: white;
-  text-decoration: none;
+  text-decoration-line: none;
 }
-footer a:hover {
-  text-decoration: underline;
+footer ul li a:hover {
+  text-decoration-line: underline;
 }
-footer i {
+footer ul li a i {
   color: white;
   font-size: 0.8rem;
 }
@@ -107,22 +107,28 @@ footer i {
   position: fixed;
   animation-duration: 2500ms;
   animation-name: loader_background;
+  animation-iteration-count: 1;
+  z-index: 0;
   display: flex;
   justify-content: center;
   align-items: center;
+  visibility: hidden;
 }
 @keyframes loader_background {
   0% {
     background-color: rgba(255, 255, 255, 0.9);
     z-index: 99;
+    visibility: visible;
   }
   99% {
     background-color: rgba(255, 255, 255, 0.9);
     z-index: 99;
+    visibility: visible;
   }
   100% {
     background-color: rgba(255, 255, 255, 0);
     z-index: 0;
+    visibility: hidden;
   }
 }
 .progress .progress_bar {
